# ChangeLog for media-libs/gegl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gegl/ChangeLog,v 1.86 2013/05/01 00:46:15 sping Exp $

  01 May 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0-r1.ebuild,
  gegl-9999.ebuild:
  Resolve dead USE="exif graphviz lua v4l" (bug #451136), reported by Nikoli

  30 Apr 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0-r1.ebuild,
  +files/gegl-0.2.0-g_log_domain.patch:
  Apply experimental fix for G_LOG_DOMAIN related compile errors (bug #416587)

  28 Apr 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0.ebuild,
  gegl-0.2.0-r1.ebuild, gegl-9999.ebuild:
  Enable tests for >=0.2.0

  28 Apr 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0-r1.ebuild,
  +files/gegl-0.2.0-introspection-version.patch:
  Use upstream patch to fix introspection version (bug #416587)

  28 Apr 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0-r1.ebuild,
  gegl-9999.ebuild:
  Move perl from RDEPEND to DEPEND (bug #415107), thanks to nzqr

  28 Apr 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0-r1.ebuild,
  gegl-9999.ebuild:
  Migrate to vala eclass (bug #467396)

  28 Apr 2013; Sebastian Pipping <sping@gentoo.org> gegl-9999.ebuild:
  Drop patch from live ebuild (bug #460778)

  27 Apr 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0.ebuild,
  gegl-0.2.0-r1.ebuild, files/gegl-0.2.0-ffmpeg-0.11.diff:
  Upgrade to libavformat v54 using upstream patch (bug #459312), thanks to
  Andrew Karpow!

  22 Feb 2013; Zac Medico <zmedico@gentoo.org> gegl-0.2.0-r1.ebuild:
  Add ~arm-linux keyword.

  23 Jan 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.1.6-r1.ebuild,
  gegl-0.1.8-r1.ebuild, gegl-0.2.0-r1.ebuild, gegl-9999.ebuild:
  Ensure verbose build (bug #453632)

*gegl-0.1.8-r1 (17 Nov 2012)
*gegl-0.1.6-r1 (17 Nov 2012)

  17 Nov 2012; Sebastian Pipping <sping@gentoo.org> +gegl-0.1.6-r1.ebuild,